package com.keanu.software.three.a4;

/**
 * <p>
 *
 * </p>
 *
 * @author <a href="https://github.com/Li-Keanu">keanu</a>
 * @since 2024/11/5 10:40
 */
public class Customer {
    private String name;
    private String contact;
    private String deliveryAddress;
    private Short active;
}
