package com.keanu.software.three.a4;

import java.util.Date;

/**
 * <p>
 *
 * </p>
 *
 * @author <a href="https://github.com/Li-Keanu">keanu</a>
 * @since 2024/11/5 10:40
 */
public class Order {
    private Date createDate;
    private Short status;
}
