package com.keanu.software.three.a4;

import java.math.BigDecimal;

/**
 * <p>
 *
 * </p>
 *
 * @author <a href="https://github.com/Li-Keanu">keanu</a>
 * @since 2024/11/5 10:40
 */
public class Payment {
    private BigDecimal amount;
}
