package com.keanu.software.three.a4;

import java.math.BigDecimal;

/**
 * <p>
 *
 * </p>
 *
 * @author <a href="https://github.com/Li-Keanu">keanu</a>
 * @since 2024/11/5 10:40
 */
public class Product {
    private String title;
    private Double weight;
    private String description;

    public BigDecimal getPriceForQuantity() {
        return null;
    }

    public Double getWeight() {
        return null;
    }
}
