package com.keanu.software.three.a4;

/**
 * <p>
 *
 * </p>
 *
 * @author <a href="https://github.com/Li-Keanu">keanu</a>
 * @since 2024/11/5 10:41
 */
public class WeixinPay {
    private String number;
}
